feat. kafka tutorial

--- a/versions.properties
+++ b/versions.properties
@@ -25,4 +25,8 @@ version.org.jetbrains..annotations=26.0.1
 
 version.org.projectlombok..lombok=1.18.36
 
+version.org.slf4j..slf4j-simple=2.0.16
+##                  # available=2.1.0-alpha0
+##                  # available=2.1.0-alpha1
+
 version.org.springframework.boot..spring-boot-gradle-plugin=3.4.1
