--- a/versions.properties
+++ b/versions.properties
@@ -23,6 +23,8 @@ version.mockito=5.15.2
 
 version.org.jetbrains..annotations=26.0.1
 
+version.org.modelmapper..modelmapper=3.2.2
+
 version.org.projectlombok..lombok=1.18.36
 
 version.org.slf4j..slf4j-simple=2.0.16
