feat. redis session 구현

--- a/versions.properties
+++ b/versions.properties
@@ -32,3 +32,5 @@ version.org.slf4j..slf4j-simple=2.0.16
 ##                  # available=2.1.0-alpha1
 
 version.org.springframework.boot..spring-boot-gradle-plugin=3.4.1
+
+version.org.springframework.boot..spring-boot-starter-data-redis=3.4.1
