--- a/apps/checkout/src/main/resources/application.properties
+++ b/apps/checkout/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.generate-unique-name=false
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8070
