--- a/versions.properties
+++ b/versions.properties
@@ -9,6 +9,8 @@
 
 version.assertj.core=3.27.2
 
+version.com.jayway.jsonpath..json-path=2.9.0
+
 version.io.jsonwebtoken..jjwt-api=0.12.6
 
 version.io.jsonwebtoken..jjwt-impl=0.12.6
