--- a/apps/tutorial-spring/src/main/resources/application.yml
+++ b/apps/tutorial-spring/src/main/resources/application.yml
@@ -1,8 +1,16 @@
 spring:
   session:
     storage-type: redis
-
+  cache:
+    type: redis
   data:
     redis:
       port: 6379
       host: localhost
+
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
+        cache: DEBUG
