feat. Sorted Map 예제

--- a/apps/tutorial-spring/src/main/resources/application.yml
+++ b/apps/tutorial-spring/src/main/resources/application.yml
@@ -7,10 +7,14 @@ spring:
     redis:
       port: 6379
       host: localhost
-
+  kafka:
+    streams:
+      state-dir: /path/to/state-dir
 logging:
   level:
     org:
       springframework:
         web: DEBUG
         cache: DEBUG
+
+
